# CPP_Minecraft_Server

./: README.md  main.cpp  meson.build  readme.txt
Data/: Registries.cpp  Registries.h  Tags.cpp  Tags.h  meson.build
Minecraft/: BlockTypes.cpp  BlockTypes.h  Chunk.h  CircularFix.cpp  CircularFix.h  Location.cpp  Location.h  Minecraft.h  Player.cpp  Player.h  World.cpp  World.h  meson.build
Network/: Client.cpp  Client.h  NetSocket.cpp  NetSocket.h  NetworkHandler.cpp  NetworkHandler.h  Packet.cpp  Packet.h  meson.build  packetHandler.cpp  packetHandler.h
Systems/: PlayerManagement.cpp  PlayerManagement.h  meson.build
Types/: TLong.cpp  TLong.h  TPrefixedArray.cpp  TPrefixedArray.h  TShort.cpp  TShort.h  TString.cpp  TString.h  TVarInt.cpp  TVarInt.h  meson.build
Util/: ReadBuffer.cpp  ReadBuffer.h  Update.h  WinPosixFix.h  WrittenBuffer.cpp  WrittenBuffer.h  meson.build  tools.cpp  tools.h
